// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the component when component is provided 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="govuk-table__cell"
        >
          <h1>
            DummyValue
          </h1>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`should render the field value when component is not provided 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="govuk-table__cell"
        >
          DummyValue
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
